<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Night Mode Toggle</string>
    <string name="app_label">Night Mode</string>
    <string name="prepare_description">Please connect the device with PC then run the following command from PC to grant permissions to this app.</string>
    <string name="grant_permission_command" translatable="false">adb shell pm grant dev.copin.nightmodetoggle android.permission.WRITE_SECURE_SETTINGS</string>
    <string name="copy">Copy</string>
    <string name="command_copied">Command copied</string>
    <string name="share">Share</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="version_name_prefix">Ver.</string>
    <string name="privacy_policy">Source code</string>
    <string name="privacy_policy_url" translatable="false">https://copin.dev/nightmodetoggle/privacy/</string>
    <string name="source_code">Source code</string>
    <string name="source_code_url" translatable="false">https://github.com/otack/NightModeToggle</string>
    <string name="toggle_btn">Toggle Night Mode</string>
    <string name="toggle_tile">Night Mode</string>
</resources>