<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:clipToPadding="false"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prepare_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:textIsSelectable="true"
        android:selectAllOnFocus="true"
        android:fontFamily="monospace"
        android:textSize="12sp"
        android:text="@string/grant_permission_command"
        android:background="#1a999999" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btnCopyCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy" />

        <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btnShareCommand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/share" />

    </LinearLayout>

    <Button
        android:id="@+id/btnToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minHeight="56dp"
        android:text="@string/toggle_btn" />

</LinearLayout>